# polar-hr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yaml
db/: enum_field.py  models.py
db/sources/: models.py
db/workout/: models.py
refresh_function/: polar.py  polar_api.py
scripts/: db_interface.py  dump_workout_data.py  dump_workout_data_store.py  insert_csv_into_db.py  map_data_dumps.py  map_videos.py  source.py  utils.py  workout.py  youtube.py  youtube_consts.py
scripts/db/: create_tables.sql  enum_field.py  models.py
scripts/tests/: test_source.py  test_utils.py  test_workout.py  test_youtube.py
src/api/: api.py  api.yml  api_base.py  api_utils.py  complex_query.py  db_base.py  partial.yml
src/api_functions/: README.md  main.py  package.json  partial.yml  serverless.yml  swagger_server
src/db/: base_model.py  enum_field.py
src/polar_api/: polar_api.py  polar_data_store.py
src/refresh_function/: main.py  package-lock.json  package.json  polar.py  requirements.txt  serverless.yml
src/scripts/: dump_workout_data_store.py  f.py  insert_csv_into_db.py  map_data_dumps.py  map_fiton.py  migrate.py  mv_samples.py  polar_raw_data.py  possible_testing.py  remove_bad_tags.py
src/utils/: config.py  db_utils.py  equipment_parsing_mixin.py  gcp_utils.py  log.py  test_base.py  test_db.py
src/workout_sources/: fiton.py  source_consts.py  video_source.py  youtube.py  youtube_consts.py
swagger_server/: __main__.py
swagger_server/models/: __init__.py  tag.py  (+19 more)
utils/: gcp_utils.py  workout_data.py  workout_data_store.py
(+57 files in other folders)
