[tool.poetry]
name = "polar-hr"
version = "0.1.0"
description = ""
authors = ["Nina <280141+ninas@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "polar_hr"}]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-storage = "^2.6.0"
google-cloud-secret-manager = "^2.12.6"
peewee = "^3.15.4"
black = "^22.10.0"
overrides = "^7.3.1"
isodate = "^0.6.1"
psycopg2-binary = "^2.9.5"
google-api-python-client = "^2.66.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
